# astro-sight

./: .coderabbit.yaml  .depup  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
skills/: SKILL.md
src/: cli.rs  commands.rs  config.rs  doctor.rs  error.rs  language.rs  lib.rs  logger.rs  main.rs  service.rs  skill.rs
src/cache/: store.rs
src/commands/: api_changes.rs  batch.rs  common.rs  dead_code.rs  dead_code_member_liveness.rs  git_input.rs  session_handler.rs  tests.rs
src/commands/api_changes/: js_ts_shadow.rs  python_signature.rs  ref_index.rs  removed_attribution.rs  rust_public.rs  ts_signature.rs
src/commands/dead_code_member_liveness/: js_ts.rs  mod.rs  php.rs
src/commands/review/: hook.rs
src/engine/: angular_template_refs.rs  bash_trap_refs.rs  calls.rs  cochange.rs  diff.rs  extractor.rs  generated.rs  gitattributes.rs  impact.rs  imports.rs  lexer.rs  lint.rs  mod.rs  parser.rs  phpunit_refs.rs  refs.rs  sequence.rs  snippet.rs  symbols.rs  xml_refs.rs
src/engine/impact/: collector.rs  filters.rs  import_facts.rs  mod.rs  pass2.rs  pass3.rs  signature.rs  test_context.rs  types.rs
src/engine/lexer/: mod.rs  xojo.rs
src/engine/symbols/: complexity.rs  cpp.rs  exported.rs  framework.rs  mod.rs  overrides.rs  scope.rs  tests.rs
src/mcp/: mod.rs
src/models/: ast_node.rs  call.rs  cochange.rs  dead_code.rs  diagnostic.rs  impact.rs  import.rs  lint.rs  location.rs  mod.rs  reference.rs  request.rs  response.rs  review.rs  sequence.rs  skip.rs  symbol.rs
src/session/: mod.rs
tests/: integration.rs
tests/fixtures/: sample.c  sample.cpp  sample.cs  sample.go  sample.java  sample.kt  sample.php  sample.py  sample.rb  sample.sh  sample.swift  sample.ts  sample.xojo_code  sample.zig  sample_phpunit_test.php
tests/fixtures/xojo_dead_code/: Caller.xojo_code  Greeter.xojo_code  Main.xojo_window  Orphan.xojo_code
tests/fixtures/xojo_testgroup/: DerivedViewModelTests.xojo_code  DesktopTestController.xojo_code  SampleViewModelTests.xojo_code
tests/integration/: git_non_ascii.rs  hidden_and_angular_liveness.rs  impact_output.rs  php_member_liveness.rs  review_dead_scope.rs  support.rs
tools/usage-stats/: Cargo.toml  Makefile
tools/usage-stats/src/: main.rs
