[package]
name = "astro-sight"
version = "26.3.100"
edition = "2024"
authors = ["owayo <yoheiowa@gmail.com>"]
description = "AI-agent-friendly AST information generation CLI"
license = "MIT"
repository = "https://github.com/owayo/astro-sight"
keywords = ["cli", "ast", "tree-sitter", "code-analysis", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.3"
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.5.60", features = ["derive"] }
aho-corasick = "1.1.4"
ignore = "0.4.25"
memchr = "2.8.0"
memmap2 = "0.9.10"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.33"
streaming-iterator = "0.1.9"
tree-sitter = "0.26.6"
tree-sitter-language = "0.1.7"
tree-sitter-rust = "0.24"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25"
tree-sitter-php = "0.24.2"
tree-sitter-java = "0.23.5"
tree-sitter-kotlin = "=0.3.5"
tree-sitter-swift = "0.7.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-bash = "0.25.1"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25"
rmcp = { version = "0.17", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.49.0", features = ["full"] }
schemars = "1.2.1"
dirs = "6.0.0"
toml = "1.0.3"
logroller = "0.1.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
tracing-appender = "0.2.4"
time = { version = "0.3.47", features = ["formatting", "macros", "local-offset"] }

[dev-dependencies]
tempfile = "3.26.0"
libc = "0.2.182"

[profile.release]
lto = true
codegen-units = 1
strip = true
