[package]
name = "astro-sight"
version = "26.7.109"
edition = "2024"
authors = ["owayo <yoheiowa@gmail.com>"]
description = "AI-agent-friendly AST information generation CLI"
license = "MIT"
repository = "https://github.com/owayo/astro-sight"
keywords = ["cli", "ast", "tree-sitter", "code-analysis", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ahash = "0.8.12"
aho-corasick = "1.1.4"
anyhow = "1.0.103"
blake3 = "1.8.5"
camino = { version = "1.2.4", features = ["serde1"] }
clap = { version = "4.6.1", features = ["derive"] }
dhat = { version = "0.3.3", optional = true }
dirs = "6.0.0"
hashbrown = "0.17.1"
ignore = "0.4.27"
logroller = "0.1.12"
lru = "0.18.0"
memchr = "2.8.3"
memmap2 = "0.9.11"
mimalloc = "0.1.52"
rayon = "1.12.0"
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
smallvec = "1.15.2"
streaming-iterator = "0.1.9"
time = { version = "0.3.53", features = ["formatting", "macros", "local-offset"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time"] }
tree-sitter = "0.26.10"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25"
tree-sitter-kotlin = "=0.3.5"  # tree-sitter 0.26 と非互換 (0.3.8 以降が >=0.21,<0.23 を要求)
tree-sitter-language = "0.1.7"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25"
tree-sitter-ruby = { git = "https://github.com/owayo/tree-sitter-ruby.git", branch = "master" }
tree-sitter-rust = "0.24.2"
tree-sitter-swift = "0.7.3"
tree-sitter-typescript = "0.23.2"
tree-sitter-zig = "1.1.2"

[features]
# `cargo run --release --features dhat-heap -- <args>` でヒーププロファイルを
# `dhat-heap.json` に出力する。巨大リポジトリでのメモリ内訳計測に使う。
dhat-heap = ["dep:dhat"]

[dev-dependencies]
tempfile = "3.27.0"
libc = "0.2.186"

[profile.release]
lto = true
codegen-units = 1
strip = true
