[package]
name = "usage-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
simd-json = "0.17.0"
rayon = "1.11.0"
glob = "0.3.3"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
comfy-table = "7.2.2"
serde_json = "1.0.149"
dirs = "6"

[profile.release]
lto = true
strip = true
